# Deskdrop

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  mwg_guides.md  test_serialize.rs  test_uri.kts
.github/workflows/: ci.yml  release.yml
cliprelay-cli/: Cargo.toml
cliprelay-cli/src/: main.rs
cliprelay-core/: Cargo.toml
cliprelay-core/benches/: benches.rs
cliprelay-core/src/: activity.rs  chunked.rs  compress.rs  crypto.rs  dedup.rs  discovery.rs  engine.rs  engine_support.rs  ffi.rs  file_transfer.rs  filter.rs  history.rs  identity.rs  ipc.rs  ipc_windows.rs  jni_android.rs  lib.rs  mesh.rs  metrics.rs  network.rs  network_manager.rs  pairing.rs  peer_manager.rs  probe.rs  protocol.rs  retry.rs  settings.rs  sim.rs  sync_controller.rs  throttle.rs  trust.rs
cliprelay-core/tests/: crypto_vectors_test.rs  e2e_test.rs  fuzz_sanity_test.rs  integration_test.rs  mesh_test.rs  notification_behaviour_test.rs
deskdrop-cli/: Cargo.toml
deskdrop-cli/src/: main.rs
deskdrop-core/: Cargo.toml  test_hkdf.rs
deskdrop-core/benches/: benches.rs
deskdrop-core/src/: activity.rs  chunked.rs  crypto.rs  dedup.rs  discovery.rs  discovery_manager.rs  engine.rs  engine_support.rs  ffi.rs  file_transfer.rs  filter.rs  history.rs  hotspot_probe.rs  identity.rs  ipc.rs  ipc_windows.rs  jni_android.rs  lib.rs  mesh.rs  network.rs  network_manager.rs  pairing.rs  peer_cache_probe.rs  peer_manager.rs  protocol.rs  retry.rs  settings.rs  sim.rs  sync_controller.rs  throttle.rs  trust.rs  udp_discovery.rs
deskdrop-core/tests/: crypto_vectors_test.rs  e2e_test.rs  fuzz_sanity_test.rs  integration_test.rs  mesh_test.rs
docs/: cross-device-moat-features-roadmap-2026-05-27.md  cross-os-connectivity-auto-reconnect-and-feature-audit-2026-05-27.md  cross-platform-feature-parity-audit-2026-05-27.md  cross-platform-ux-research-2026-05.md  deep-ui-ux-journey-audit-2026-05-27.md  full-stack-friction-fault-tolerance-connectivity-audit-2026-05-27.md  functionality-audit-2026-05-27.md  future-roadmap-and-feature-list-2026-05-27.md  post-release-stability-and-ux-audit-2026-05-27.md  third-round-ux-trust-accessibility-audit-2026-05-27.md  windows-app-ultimate-polish-audit-2026-05-28.md  windows-deep-polish-audit-2026-28-05
docs/architecture/: CORE_ENGINE.md  FILE_TRANSFERS.md  PLATFORM_INTEGRATION.md  SECURITY_AND_PROTOCOL.md
release/Deskdrop.app/Contents/Resources/: AppIcon.icns
release/Deskdrop.app/Contents/_CodeSignature/: CodeResources
release/windows/: Deskdrop.deps.json
scripts/: build-android.sh  build-macos.sh  bump-version.py  generate_android_icons.py  reinstall-all.sh  rename_all.sh  test-windows-ipc.ps1
