[package]
name = "cliprelay-cli"
version = "0.1.0"
edition = "2021"
description = "Deskdrop command-line management tool"
license = "MIT"

[[bin]]
name = "cliprelay-cli"
path = "src/main.rs"

[dependencies]
cliprelay-core = { path = "../cliprelay-core" }
anyhow = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
